-Added bottom toolbar on ShoppingCart fragment

--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".retail.ui.home.ShoppingCartFragment">
+    tools:context=".retail.ui.cart.ShoppingCartFragment">
 
     <TextView
         android:id="@+id/text_home"
