-Implemented client side for receiving labels from google collab -Showing popup with the product that was detected and adding that product to the shopping cart fragment list - Added scroll view to the shopping-cart fragment -Changed the ip of the server and made public

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,12 +21,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-
+    <!--Theme.AppCompat.Light.DarkActionBar-->
     <style name="HermesCustomTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/orangeRed</item>
         <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorAccent">@color/orangeRed</item>
-        <!--<item name="titleTextColor">@color/black</item>-->
+        <item name="colorAccent">@color/orangeRed<!--orangeRed--></item>
+
         <item name="android:textColor">@color/black</item>
         <item name="colorButtonNormal">@color/hermes_button_color</item>
         <item name="colorControlHighlight">@color/khaki</item>
