--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,12 +18,62 @@
         android:id="@+id/products_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:paddingTop="20dp">
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <!--<LinearLayout
+            android:id="@+id/product_img_layout"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:paddingBottom="20dp">
+
+        </LinearLayout>-->
+
+
+        <LinearLayout
+            android:id="@+id/product_name_layout"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:orientation="vertical"
+
+            android:paddingBottom="20dp">
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/product_price_layout"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+
+            android:layout_weight="1"
+
+            android:paddingBottom="20dp">
+
+        </LinearLayout>
 
     </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/pay_pm_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:backgroundTint="#FF8C00"
+        android:contentDescription="@string/add_payment_method_action_button"
+        android:src="@drawable/baseline_payment_black_24"
+        android:tint="#000000"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/bottom_toolbar"
@@ -52,7 +110,7 @@
                 android:paddingRight="10dp"
                 android:textSize="24sp"
                 android:textColor="@color/colorWhite"
-                android:text="10.00 €"/>
+                android:text="0.00 €"/>
 
 
         </LinearLayout>
@@ -64,10 +122,8 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+</androidx.constraintlayout.widget.ConstraintLayout></ScrollView>
 
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
